--- a/ch03/index.html
+++ b/ch03/index.html
@@ -14,7 +14,7 @@
 	</header>
 	
 	<main>
-	<p>New York Times columnist and author, Andrew Ross Sorkin, has been described <q>as the most famous financial journalist of his generation.</q> His book, Too Big to Fail, was the first behind-the-scenes account of the financial crisis that led to our current recession. </p>
+	<p>New York Times columnist and author, Andrew Ross Sorkin, has been described <q>as the most famous financial journalist of his generation.</q> His book, <i>Too Big to Fail</i>, was the first behind-the-scenes account of the financial crisis that led to our current recession. </p>
 	<p>The Economist, The Financial Times, and Business Week all named <i>Too Big To Fail</i> one of the best books of the year. The book was published by Viking October 20, 2009. The book was adapted as a movie by HBO Films and premiered on HBO on May 23, 2011. </p>
 			
 	<h2>The cast of the movie: <i>Too Big to Fail</i> </h2>
@@ -33,8 +33,8 @@
 	</main>
 
 	<footer>
-	Prepared by: Joseph Melena <br>
-	Date: March 16, 2025
+	<p>Prepared by: Joseph Melena</p>
+	<p>Date: March 16, 2025</p>
 	</footer>
 	
 </body>
