--- a/ch07b/index.html
+++ b/ch07b/index.html
@@ -15,6 +15,27 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+
+	<nav class="navbar">
+		<ul class = "menu">
+			<li><a href="index.html" class = "current">Home</a></li>
+			<li><a href="tickets.html">Tickets</a></li>
+			<li><a href="speakers.html">Speakers &#9662;</a>
+				<ul class="submenu">
+					<li><a href="#">October <br> David Brancaccio</a></h3></li>
+					<li><a href="#">November <br> Andrew Ross Sorkin</a></li>
+					<li><a href="#">January <br> Amy Chua</a></li>
+					<li><a href="#">February <br> Scott Sampson</a></li>
+				</ul>
+			</li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+		</ul>
+	</nav>
+
+
+
+
 	<main>
 		<aside>
 			<h2>Our Mission</h2>
@@ -25,15 +46,7 @@
 			<blockquote>&lsquo;Each year I give a ticket package to each of our family members. 
 			I think of it as the gift of knowledge...and that is priceless.&rsquo;</blockquote>
 
-			<h2>Guest Speakers</h2>
-			<h3>October<br><a href="#">David Brancaccio</a></h3>
-			<img src="images/brancaccio75.jpg" alt="David Brancaccio photo">
-			<h3>November<br><a href="#">Andrew Ross Sorkin</a></h3>
-			<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
-			<h3>January<br><a href="#">Amy Chua</a></h3>
-			<img src="images/chua75.jpg" alt="Amy Chua photo">
-			<h3>February<br><a href="#">Scott Sampson</a></h3>
-			<img src="images/sampson75.jpg" alt="Scott Sampson photo">
+			
 		</aside>
 		<section>
 			<h1>Speaker of the Month</h1>
