--- a/ch08c/index.html
+++ b/ch08c/index.html
@@ -16,6 +16,8 @@
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
 	<nav class="navbar">
+		<input type="checkbox" id="menu-toggle">
+		<label for="menu-toggle" class="menu-btn"></label>
 		<ul class="menu">
 			<li><a href="#">Home</a></li>
 			<li><a href="#">Tickets</a></li>
@@ -37,6 +39,8 @@
 		<section>
 			<h1>Our Speakers</h1>
 			<nav class="navbar">
+				<input type="checkbox" id="speaker-menu-toggle">
+				<label for="speaker-menu-toggle" class="menu-btn"></label>
 				<ul class="menu">
 					<li><a href="#">October<br>David Brancaccio</a></li>
 					<li><a href="#">November<br>Andrew Ross Sorkin</a></li>
