Short Exercises 9 done

--- a/ch09/contact.html
+++ b/ch09/contact.html
@@ -29,6 +29,12 @@
 	<main>
 		<section>
 			<h1>Contact Us</h1>
+			<ul class ="contact-info">
+				<li>Phone: <a href="tel:5551234567"> (555) 123-4567</a></li>
+				<li>Email: <a href="mailto:info@sjvth.org"> info@sjvth.org</a>
+				<li><a href="https://www.facebook.com" target="_blank" class = "facebook">Facebook</a></li>
+				<li>Listen to our <a href="media/welcome.mp3" target="_blank">welcome message </a></li>
+				</ul>
 		</section>
 		<aside>
 			<h2>Our Mission</h2>
