--- a/ch14/index.html
+++ b/ch14/index.html
@@ -15,6 +15,7 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+	<main>
 	<aside>
 		<h2>Guest Speakers</h2>
 		<h3>October<br><a href="#">David Brancaccio</a></h3>
@@ -61,6 +62,7 @@
 		<p>SJV Town Hall is pleased to announce the addition of award-winning author Andrew Ross Sorkin. 
 		The appearance of previously scheduled speaker, Greg Mortenson, has been postponed.</p>
 	</aside>
+	</main>
 	<footer>
 		<p>&copy; San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
